--- a/notebooks/tokenize_data.ipynb
+++ b/notebooks/tokenize_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "51c02e95",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cd26dbcb",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bba1f329",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,7 @@
     "def preprocess_and_tokenize(df, text_column):\n",
     "    # Lowercase and remove whitespace\n",
     "    texts = df[text_column].str.lower().str.strip().tolist()\n",
+    "    labels = df['label'].tolist()\n",
     "\n",
     "    encoding = tokenizer(\n",
     "        texts,\n",
@@ -42,12 +43,13 @@
     "        max_length=MAX_LEN,\n",
     "        return_tensors='pt'\n",
     "    )\n",
-    "    return encoding['input_ids'], encoding['attention_mask']"
+    "    labels = torch.tensor(labels)\n",
+    "    return encoding['input_ids'], encoding['attention_mask'], labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "00a87e3e",
    "metadata": {},
    "outputs": [],
@@ -59,17 +61,18 @@
     "    print(f\"Number of samples: {len(df)}\")\n",
     "    print(f\"Columns: {df.columns.tolist()}\")\n",
     "\n",
-    "    input_ids, attention_mask = preprocess_and_tokenize(df, 'text')\n",
+    "    input_ids, attention_mask, labels = preprocess_and_tokenize(df, 'text')\n",
     "\n",
     "    torch.save(input_ids, f'../data/processed/{save_prefix}_input_ids.pt')\n",
     "    torch.save(attention_mask, f'../data/processed/{save_prefix}_attention_mask.pt')\n",
+    "    torch.save(labels, f'../data/processed/{save_prefix}_labels.pt')\n",
     "\n",
-    "    print(f\"Saved {save_prefix} input_ids and attention_mask!\\n\")"
+    "    print(f\"Saved {save_prefix} input_ids, attention_mask, and labels!\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b9a89414",
    "metadata": {},
    "outputs": [
@@ -80,17 +83,17 @@
       "Processing ../data/processed/train.csv...\n",
       "Number of samples: 1200\n",
       "Columns: ['text', 'label']\n",
-      "Saved train input_ids and attention_mask!\n",
+      "Saved train input_ids, attention_mask, and labels!\n",
       "\n",
       "Processing ../data/processed/val.csv...\n",
       "Number of samples: 150\n",
       "Columns: ['text', 'label']\n",
-      "Saved val input_ids and attention_mask!\n",
+      "Saved val input_ids, attention_mask, and labels!\n",
       "\n",
       "Processing ../data/processed/test.csv...\n",
       "Number of samples: 150\n",
       "Columns: ['text', 'label']\n",
-      "Saved test input_ids and attention_mask!\n",
+      "Saved test input_ids, attention_mask, and labels!\n",
       "\n"
      ]
     }
@@ -104,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
